--- a/src/componens/pages/Home/CounNumber/style.scss
+++ b/src/componens/pages/Home/CounNumber/style.scss
@@ -1,50 +1,125 @@
 .counters {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    // gap: 0rem;
-    color: #000;
-    direction: rtl; // Enables RTL support for Arabic text
-    margin: 6%;
-    .counter-title {
-        font-size: 1.9rem;
-        font-weight:  bolder;
-        color: #1f1f1f;
-        border-bottom: 1px solid rgb(177, 177, 177);
-      //   padding: 5%;
-      }
-    .counter-item {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  color: #000;
+  direction: rtl; // Default for Arabic text
+  margin: 6%;
+
+  .counter-title {
+    font-size: 1.9rem;
+    font-weight: bolder;
+    color: #1f1f1f;
+    border-bottom: 1px solid rgb(177, 177, 177);
+  }
+
+  .counter-item {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 3%;
+
+    .counter-header {
       display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-left: 10%;
-      margin-right: 10%;
-      margin-bottom: 3%;
-    //   background-color: #000;
-   
-  
-      .counter-header {
-        display: flex;
-        align-items: end;
-        justify-content: space-between;
-        // gap: 1rem;
-        // background-color: #a5a5a5;
-  
-        .counter-number {
-          font-size: 6rem;
-          font-weight: 900;
-          line-height: 85px;
-          color: #5d7e4b;
-        }
-  
-     
+      align-items: end;
+      justify-content: space-between;
+
+      .counter-number {
+        font-size: 6rem;
+        font-weight: 900;
+        line-height: 85px;
+        color: #5d7e4b;
       }
-  
-      .counter-desc {
+    }
+
+    .counter-desc {
+      font-size: 1.7rem;
+      line-height: 1.4;
+      font-weight: bold;
+      color: #0c6a69;
+    }
+  }
+}
+
+// Apply styles for [dir="ltr"]
+[dir="ltr"] .counters {
+  direction: ltr;
+
+  .counter-item {
+    margin-left: 10%;
+    margin-right: 10%;
+
+    .counter-title {
+      text-align: left;
+    }
+
+    .counter-header {
+      flex-direction: row-reverse; // Flip alignment
+      justify-content: space-between;
+
+      .counter-number {
+        text-align: left;
+      }
+    }
+
+    .counter-desc {
+      text-align: left;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .counters {
+    grid-template-columns: 1fr;
+    margin: 4%;
+
+    .counter-item {
+      margin-left: 5%;
+      margin-right: 5%;
+      margin-bottom: 5%;
+
+      .counter-title {
         font-size: 1.7rem;
-        line-height: 1.4;
-        font-weight: bold;
-        color: #0c6a69;
+      }
+
+      .counter-header .counter-number {
+        font-size: 4rem;
+        line-height: 65px;
+      }
+
+      .counter-desc {
+        font-size: 1.5rem;
       }
     }
   }
-  
+}
+
+@media (max-width: 480px) {
+  .counters {
+    grid-template-columns: 1fr;
+    margin: 2%;
+
+    .counter-item {
+      margin-left: 3%;
+      margin-right: 3%;
+      margin-bottom: 7%;
+
+      .counter-title {
+        font-size: 1.5rem;
+        text-align: start;
+      }
+
+      .counter-header .counter-number {
+        font-size: 3rem;
+        line-height: 50px;
+        text-align: center;
+      }
+
+      .counter-desc {
+        font-size: 1.2rem;
+        text-align: center;
+      }
+    }
+  }
+}
