--- a/src/componens/pages/Home/Activities/style.scss
+++ b/src/componens/pages/Home/Activities/style.scss
@@ -15,7 +15,7 @@
         border-radius: 12px;
         margin-top: 0px;
         padding: 20px;   
-         animation: move 3s ease-in infinite;
+        //  animation: move 3s ease-in infinite;
  
         h5 {
           margin: 20px 0px 10px 0px;
