--- a/src/componens/pages/Home/Objectives/style.scss
+++ b/src/componens/pages/Home/Objectives/style.scss
@@ -17,7 +17,7 @@
         margin-top: 50px;
         padding: 20px;   
         height: 200px;
-         animation: moveUp  ease-in-out infinite;
+        //  animation: moveUp  ease-in-out infinite;
  
         h5 {
           margin: 20px 0px 10px 0px;
