--- a/src/componens/pages/Home/Participatingparties/style.scss
+++ b/src/componens/pages/Home/Participatingparties/style.scss
@@ -17,7 +17,7 @@
       display: grid;
       justify-content: center;
     img {
-      animation: moveright 2s ease-out infinite;
+      // animation: moveright 2s ease-out infinite;
       width: 150px;
     height: 150px;
     object-fit: contain;
