--- a/src/componens/pages/Home/Header/style.scss
+++ b/src/componens/pages/Home/Header/style.scss
@@ -1,149 +1,184 @@
-.header-slide{
-  .swiper {
-  width: 100%;
-  height: 900px;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-@media (min-width: 992px) {
-  .swiper-pagination-fraction,
-  .swiper-pagination-custom,
-  .swiper-horizontal > .swiper-pagination-bullets,
-  .swiper-pagination-bullets.swiper-pagination-horizontal {
-    bottom: 0px;
-    top: 40px;
-    width: 100%;
-    transform: rotate(90deg);
-    right: 73%;
-    width: 100%;
-  }
-
-  .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
-  .swiper-pagination-horizontal.swiper-pagination-bullets
-    .swiper-pagination-bullet {
-    border-radius: 0px;
-  }
-
-  .swiper-pagination-bullet-active {
-    background: white;
-  }
-}
-.left-sec {
+.featured-article {
   position: relative;
   width: 100%;
-  height: 100%;
-  img {
-    height: 100%;
-  }
-  .content {
-    position: sticky;
-    z-index: 99;
-    bottom: 0px;
-    right: 0px;
-    background: white;
-    width: 63%;
-    min-height: 200px;
-    padding: 30px;
-    display: flex;
-    justify-content: start;
-    gap: 20px;
-    align-items: center;
-    h3 {
-      font-weight: 700;
-      font-size: 40px;
-    }
-    p {
-      text-align: start;
-    }
-  }
-}
-.row {
-  height: 100%;
-}
-.right-sec {
-  width: 100%;
-  display: flex;
-  height: 900px;
-  justify-content: space-between;
-  flex-direction: column;
-  gap: 50px;
-  .content {
-    //   display: flex;
-    // flex-direction: column;
-    // justify-content: center;
-    // width: 100%;
-    // height: 53.8%;
-    // text-align: start;
-    // margin:20% 0px;
-    padding: 150px 35px 0px;
-    text-align: start;
-    h1 {
-      word-break: keep-all;
-      font-weight: 600;
-      line-height: 1.5;
-    }
-  }
-  .img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-}
-@media (max-width: 992px) {
-  .row {
-    justify-content: start;
-    display: flex !important;
-    flex-direction: column-reverse;
-    top: 0px;
-  }
-  .right-sec,
-  .left-sec {
-    height: 400px;
-    position: relative;
-  }
-  .right-sec .img img {
-    height: 400px;
-  }
-  .left-sec .content,
-  .right-sec .content {
-    position: absolute;
-    background: #ffffffcf;
-    width: 100%;
-    padding: 12px 12px;
-    align-items: center;
-    top: 0px;
-    bottom: auto;
-    box-shadow: 0px 0px 27px black;
-    width: 90%;
-    
-  }
-}
-}body[dir="ltr"] {
-.swiper {
-   direction: rtl;
-}.header-slide .row{
-   direction: ltr;
-}
+  height: 95vh;
+  background-size: cover;
+  background-position: center center;
+  transition: background-image 0.8s ease-in-out;
 
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: column;
+    text-align: start;
+    padding: 7%;
+
+    .content {
+      max-width: 1300px;
+
+      .featured-label {
+        font-size: 17px;
+        font-weight: bold;
+        letter-spacing: 2px;
+        color: #749165;
+      }
+
+      .title {
+        font-size: 40px;
+        font-weight: bold;
+        line-height: 1.2;
+        margin-bottom: 20px;
+        color: #fff;
+      }
+    }
+  }
+
+  .footer {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+
+    .footer-links {
+      border-top: 1px solid #ffffff8c;
+      display: flex;
+      justify-content: space-between;
+      list-style: none;
+      padding-top: 2%;
+      margin: 0;
+
+      li {
+        display: flex;
+        align-items: center !important;
+        align-content: center !important;
+        place-items: center;
+        justify-content: flex-start !important;
+        width: 100%;
+        height: 100%;
+
+        .diamond {
+          width: 20px;
+          height: 20px;
+          border: 1px solid #ffffff8c;
+          transform: rotate(45deg);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          position: relative;
+          transition: all 0.3s ease-in-out;
+          margin: 20px;
+
+          span {
+            transform: rotate(-45deg);
+            font-size: 13px;
+            color: #fff;
+          }
+        }
+
+        &.active .diamond {
+          background-color: #5e7f4c;
+          border: 2px solid #ffffff8c;
+        }
+
+        h6 {
+          color: #fff;
+          text-decoration: none;
+          font-size: 18px;
+          transition: color 0.3s ease;
+
+          &:hover {
+            color: #739661;
+          }
+        }
+
+        &.active h6 {
+          font-weight: bold;
+          color: #739661;
+        }
+      }
+    }
+  }
+
+  
+  @media (max-width: 768px) {
+    .overlay {
+      padding: 10%;
+      padding-top: 30px !important;
+      justify-content: start;
+    }
+
+    .content {
+      max-width: 100%;
+    }
+
+    .title {
+      font-size: 25px !important; 
+      margin-bottom: 15px;
+    }
+
+    .featured-label {
+      font-size: 14px;  
+      padding-top: 80px !important;
+    }
+
+    .footer {
+      bottom: 2px !important; 
+    }
+
+    .footer-links {
+      flex-direction: column; 
+      align-items: center;  
+      margin-top: 10px;
+    }
+
+    li {
+      padding-top: 0.1% !important;
+      margin-bottom: 2px;  
+
+      .diamond {
+        margin: 10px;
+      }
+
+      h6 {
+        font-size: 16px; 
+      }
+
+      &.active h6 {
+        font-size: 16px; 
+      }
+    }
+  }
+
+  @media (max-width: 480px) {
+    .title {
+      font-size: 24px  !important;
+      margin-bottom: 10px;
+    }
+
+    .featured-label {
+      font-size: 12px; 
+    }
+
+    .footer {
+      bottom: 2px !important;
+      
+    }
+
+    .footer-links {
+      padding-top: 0;
+    }
+
+    li {
+      padding-top: 0.1% !important;
+      margin-bottom: 2px; 
+    }
+  }
 }
