--- a/src/componens/pages/Home/Supporters/style.scss
+++ b/src/componens/pages/Home/Supporters/style.scss
@@ -17,7 +17,7 @@
         margin: auto;
         border-radius: 12px;
         padding: 5px 20px;
-        animation: moveright ease-out infinite;
+        // animation: moveright ease-out infinite;
 
         h5 {
           margin: 20px 0px 10px 0px;
@@ -34,30 +34,7 @@
         }
       }
     }
-    > div:nth-child(1) .content {
-      animation-duration: 1s;
-    }
-    > div:nth-child(2) .content {
-      animation-duration: 1.5s;
-    }
-    > div:nth-child(3) .content {
-      animation-duration: 2s;
-    }
-    > div:nth-child(4) .content {
-      animation-duration: 2.5s;
-    }
-    > div:nth-child(5) .content {
-      animation-duration: 3s;
-    }
-    > div:nth-child(6) .content {
-      animation-duration: 3.5s;
-    }
-    > div:nth-child(7) .content {
-      animation-duration: 4s;
-    }
-    > div:nth-child(8) .content {
-      animation-duration: 4.5s;
-    }
+  
   }
   .type-title {
     margin: 50px 0px 0px;
@@ -75,7 +52,7 @@
       margin-bottom: 20px;
     }
     img {
-      animation: moveright 2s ease-out infinite;
+      // animation: moveright 2s ease-out infinite;
       width: 150px;
     height: 150px;
     object-fit: contain;
@@ -89,6 +66,12 @@
     }
   }
 }
+.row .list .content     img {
+      // animation: moveright 2s ease-out infinite;
+      width: 150px;
+    height: 150px;
+    object-fit: contain;
+    }
 @keyframes moveright {
   0% {
     transform: translateX(0);
